feat: add button component style

--- a/fancy-weather/src/styles/components/_button.scss
+++ b/fancy-weather/src/styles/components/_button.scss
@@ -36,6 +36,7 @@ $button-bgcolor-hover: $color-darken;
   line-height: $line-height;
   padding: $button-padding;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 // Relationships (отношения) —- любые CSS, которые отвечают за
@@ -55,4 +56,11 @@ $button-bgcolor-hover: $color-darken;
     $button-textcolor,
     $button-bgcolor-hover
   );
+
+  &--refresh {
+    background-image: url('../../images/Vector.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center center;
+  }
 }
