feat: move images

--- a/fancy-weather/src/styles/components/_button.scss
+++ b/fancy-weather/src/styles/components/_button.scss
@@ -58,7 +58,7 @@ $button-bgcolor-hover: $color-darken;
   );
 
   &--refresh {
-    background-image: url('../../images/Vector.svg');
+    background-image: url('../../assets/images/Vector.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
