--- a/fancy-weather/src/styles/components/_today.scss
+++ b/fancy-weather/src/styles/components/_today.scss
@@ -2,53 +2,81 @@
   color: $color-text;
   font-family: Montserrat;
   font-weight: bold;
-  max-width: 90%;
-  background-color: white;
+  max-width: 597px; //fix width
+  // background-color: white;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
+  // align-items: baseline;
 
   &__city-title {
-    height: 54px;
-    background-color: red;
     flex: 1 1 100%;
-    // font-size: 44px;
-    // line-height: 54px;
-    // text-transform: uppercase;
+    line-height: 54px;
+    font-size: 44px;
+    // background-color: red;
+    text-transform: uppercase;
   }
 
   &__date-time {
-    height: 29px;
-    background-color: green;
     flex: 1 1 100%;
-    // justify-content: center;
-    // font-size: 24px;
-    // line-height: 29px;
-    // font-weight: 600;
+    line-height: 29px;
+    font-size: 24px;
+    // background-color: green;
+
+    display: flex;
+
+    & :last-child {
+      margin-left: 18px;
+    }
   }
 
   &__temperature {
-    height: 373px;
-    background-color: yellow;
-    flex: 0 1 55%;
-    // font-size: 306px;
-    // font-weight: bold;
+    position: relative;
+    flex: 0 1 auto;
+    line-height: 1;
+    font-size: 300px;
+    // background-color: yellow;
+    text-transform: uppercase;
+    text-align: center;
+
+    &::after {
+      position: absolute;
+      top: 15px;
+      right: -225px;
+      content: '';
+      height: 140px;
+      width: 240px;
+      position: absolute;
+      // background-color: lightcoral;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: contain;
+    }
+
+    &--cloudy::after {
+      background-image: url('../../assets/images/cloudy.svg');
+    }
   }
 
   &__grad {
-    // font-size: 100px;
-    // font-weight: bold;
+    flex: 0 1 auto;
+    font-size: 100px;
+    // background-color: darkblue;
+    padding: 0 1rem;
+    margin-top: 35px;
+    z-index: 5;
   }
 
   &__summary {
-    height: 137px;
-    background-color: blue;
+    z-index: 5;
     flex: 0 1 30%;
+    line-height: 37px;
+    font-size: 22px;
+    font-weight: bold;
+    text-transform: uppercase;
+    // background-color: blue;
     align-self: flex-end;
-    // font-size: 22px;
-    // line-height: 37px;
-    // font-weight: bold;
-    // text-transform: uppercase;
+    margin-bottom: 35px;
   }
 
   & p {
