--- a/fancy-weather/src/styles/components/_geo.scss
+++ b/fancy-weather/src/styles/components/_geo.scss
@@ -11,6 +11,16 @@
   &__map {
     width: 375px;
     height: 375px;
+    clip-path: polygon(
+      20% 0%,
+      80% 0%,
+      100% 20%,
+      100% 80%,
+      80% 100%,
+      20% 100%,
+      0% 80%,
+      0% 20%
+    );
   }
 
   &__coordinates {
