--- a/fancy-weather/src/styles/layout/_main.scss
+++ b/fancy-weather/src/styles/layout/_main.scss
@@ -1,4 +1,5 @@
 .main {
+  position: relative;
   min-height: 100vh;
   display: grid;
   grid-template-columns: 2fr 1fr;
@@ -10,6 +11,18 @@
     'forecast geo';
   background-color: rgba($color: #000000, $alpha: 0.5);
   align-items: center;
+
+  &::after {
+    content: '';
+    z-index: -5;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-image: url('../../assets/images/weather.png');
+    background-size: cover;
+  }
 
   &__controls {
     grid-area: controls;
