--- a/fancy-weather/src/styles/layout/_main.scss
+++ b/fancy-weather/src/styles/layout/_main.scss
@@ -9,20 +9,10 @@
     'controls controls'
     'today    geo'
     'forecast geo';
-  background-color: rgba($color: #000000, $alpha: 0.5);
   align-items: center;
-
-  &::after {
-    content: '';
-    z-index: -5;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-image: url('../../assets/images/weather.png');
-    background-size: cover;
-  }
+  box-shadow: inset 0 0 0 100vh rgba(0, 0, 0, 0.4);
+  background-image: url('../../assets/images/weather.png');
+  background-size: cover;
 
   &__controls {
     grid-area: controls;
