feat: add media queries

--- a/fancy-weather/src/styles/components/_search.scss
+++ b/fancy-weather/src/styles/components/_search.scss
@@ -17,6 +17,10 @@
     &::placeholder {
       color: $color-text;
     }
+
+    @media (max-width: 520px) {
+      width: 100%;
+    }
   }
 
   &__controls {
