--- a/fancy-weather/src/styles/components/_forecast.scss
+++ b/fancy-weather/src/styles/components/_forecast.scss
@@ -3,6 +3,10 @@
   justify-content: space-between;
   max-width: 582px; //fix width
 
+  @media (max-width: 520px) {
+    display: block;
+  }
+
   &__day {
     flex: 1 1 30%;
 
