--- a/fancy-weather/src/styles/components/_geo.scss
+++ b/fancy-weather/src/styles/components/_geo.scss
@@ -7,20 +7,18 @@
   display: flex;
   flex-direction: column;
   text-align: end;
+  align-items: center;
 
   &__map {
     width: 375px;
     height: 375px;
-    clip-path: polygon(
-      20% 0%,
-      80% 0%,
-      100% 20%,
-      100% 80%,
-      80% 100%,
-      20% 100%,
-      0% 80%,
-      0% 20%
-    );
+    clip-path: circle(50% at 50% 50%);
+    margin-bottom: 20px;
+
+    @media (max-width: 375px) {
+      width: 320px;
+      height: 320px;
+    }
   }
 
   &__coordinates {
