--- a/fancy-weather/src/styles/layout/_main.scss
+++ b/fancy-weather/src/styles/layout/_main.scss
@@ -13,6 +13,15 @@
   box-shadow: inset 0 0 0 100vh rgba(0, 0, 0, 0.4);
   background-image: url('../../assets/images/weather.png');
   background-size: cover;
+  margin: 0 auto;
+  padding: 5vh 5vw;
+
+  @media (max-width: 850px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5px;
+  }
 
   &__controls {
     grid-area: controls;
